--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
     compile files('libs/opencsv-2.2.jar')
     compile files('libs/snmp6_1.jar')
     compile files('libs/ZSDK_ANDROID_API.jar')
+
+    compile files('libs/OnBarcode.AndroidBarcode.jar')
 }
